--- a/back_font_test/pebblesite/templates/authn/password_reset_form.html
+++ b/back_font_test/pebblesite/templates/authn/password_reset_form.html
@@ -1,4 +1,4 @@
-{% extends "website/base.html" %}
+{% extends "website/login_base.html" %}
 {% block body %}
     {% csrf_token %}
     <nav aria-label="breadcrumb">
