--- a/back_font_test/pebblesite/account/static/styles/login.css
+++ b/back_font_test/pebblesite/account/static/styles/login.css
@@ -5,6 +5,7 @@
 /* BASIC */
 
 
+
 .main {
   font-family: var(--font-family-custom);
   height: 100vh;
@@ -75,9 +76,8 @@ h2.active {
 /* FORM TYPOGRAPHY*/
 
 input[type=button], input[type=submit], input[type=reset]  {
-  background-color: #FF62C7 ;
+  background-color: white ;
   border: none;
-  color: white;
   padding: 15px 80px;
   text-align: center;
   text-decoration: none;
@@ -85,7 +85,7 @@ input[type=button], input[type=submit], input[type=reset]  {
   text-transform: uppercase;
   font-size: 13px;
   -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-  box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+  box-shadow: 0 10px 30px 0 rgba(233, 95, 95, 0.4);
   -webkit-border-radius: 5px 5px 5px 5px;
   border-radius: 5px 5px 5px 5px;
   margin: 5px 20px 40px 20px;
@@ -107,9 +107,8 @@ input[type=button]:active, input[type=submit]:active, input[type=reset]:active  
   -ms-transform: scale(0.95);
   transform: scale(0.95);
 }
-
-input[type=text] {
-  background-color: #f6f6f6;
+input#id_username, input#id_password {
+  background-color: rgb(193, 189, 189);
   border: none;
   color: #0d0d0d;
   padding: 15px 32px;
@@ -128,6 +127,7 @@ input[type=text] {
   -webkit-border-radius: 5px 5px 5px 5px;
   border-radius: 5px 5px 5px 5px;
 }
+
 
 input[type=text]:focus {
   background-color: #fff;
