--- a/back_font_test/pebblesite/templates/authn/login.html
+++ b/back_font_test/pebblesite/templates/authn/login.html
@@ -1,11 +1,10 @@
-{% extends "website/base.html" %}
+{% extends "website/login_base.html" %}
 
 
 {% block body %}
-    <title>Login</title>
+  
      <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item active" aria-current="page"><h3>Login Here</h3></li>
                 </ol>
             </nav>
     <div id="content-main">
@@ -27,22 +26,28 @@
             {% endfor %}
         {% endif %}
 
-
+ 
 
         <form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
             <div class="form-group">
+             
                 {{ form.username.errors }}
-                {{ form.username.label_tag }}
-                {{ form.username }}
+                
+                {{ form.username.label_tag }} 
+             
+                {{ form.username }} 
+             
             </div>
             <div class="form-group">
+               
                 {{ form.password.errors }}
-                {{ form.password.label_tag }}
-                {{ form.password }}
-                <input type="hidden" name="next" value="{{ next }}">
+                {{ form.password.label_tag }} 
+                {{ form.password }} 
+                <!-- <input type="hidden" name="next" value="{{ next }}"> -->
             </div>
             {% url 'admin_password_reset' as password_reset_url %}
             {% if password_reset_url %}
+            
                 <div class="password-reset-link">
                     <a href="{{ password_reset_url }}">Forgotten your password or username?</a>
                 </div>
@@ -52,7 +57,7 @@
             </div>
             <br/>
            <!-- <a class="btn btn-primary" href="{% url 'password_reset' %}">Forgot password?</a>-->
-            <a class="btn btn-primary" href="{% url 'register' %}">Register</a>
+ <!--            <a class="btn btn-primary" href="{% url 'register' %}">Register</a> -->
         </form>
 
 
