--- a/back_font_test/pebblesite/templates/authn/password_change_form.html
+++ b/back_font_test/pebblesite/templates/authn/password_change_form.html
@@ -1,4 +1,4 @@
-{% extends "website/base.html" %}
+{% extends "website/login_base.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block content_title %}<h1>{{ title }}</h1>{% endblock %}
 
