--- a/back_font_test/pebblesite/templates/website/index.html
+++ b/back_font_test/pebblesite/templates/website/index.html
@@ -22,13 +22,14 @@
   <header>
     <div class="container_top">
       <div class="logo_name">
+        <a></a>
         <img class="images_logo" src="../static/images/logo.png" alt="logo-pebble">
       </div>
       <div class="nav_bar_menu">
         <nav>
           <ul>
             <li>
-              <a href="#" class="button-style button-menu" data-show="home">Home</a>
+              <a href="{% url 'index' %}" class="button-style button-menu" data-show="home">Home</a>
             </li>
             <li>
               <a href="{% url 'about' %}" class="button-style button-menu" data-show="about">About</a>
