--- a/back_font_test/pebblesite/templates/authn/logged_out.html
+++ b/back_font_test/pebblesite/templates/authn/logged_out.html
@@ -1,4 +1,4 @@
-{% extends "website/login_base.html" %}
+{% extends "website/index_logout.html" %}
 
 
 {% block body %}
@@ -7,5 +7,4 @@
   Thanks for spending time with Pebble Match today. Hope to see you soon!
 </div>
 
-    <p><a class="btn btn-primary" href="{% url 'login' %}">Login again</a></p>
 {% endblock %}
