--- a/back_font_test/pebblesite/templates/website/base.html
+++ b/back_font_test/pebblesite/templates/website/base.html
@@ -37,11 +37,11 @@
                     <nav>
                          <ul>
                               <li>
-                                   <a href="../templates/index.html" class="button-menu button-style" data-show="home">
+                                   <a href="{% url 'index' %}" class="button-menu button-style" data-show="home">
                                         Home </a>
                               </li>
                               <li>
-                                   <a href="../templates/about.html" class="button-menu button-style" data-show="about">
+                                   <a href="{% url 'about' %}" class="button-menu button-style" data-show="about">
                                         About </a>
                               </li>
                               <li>
