--- a/back_font_test/pebblesite/templates/website/login_base.html
+++ b/back_font_test/pebblesite/templates/website/login_base.html
@@ -30,11 +30,11 @@
                  <nav>
                       <ul>
                            <li>
-                                <a href="../templates/index.html" class="button-menu button-style"
+                                <a href="{% url 'index' %}" class="button-menu button-style"
                                      data-show="home"> Home </a>
                            </li>
                            <li>
-                                <a href="../templates/about.html"
+                                <a href="{% url 'about' %}"
                                      class="button-menu button-style" data-show="about"> About </a>
                            </li>
                            <li>
