--- a/back_font_test/pebblesite/templates/website/base.html
+++ b/back_font_test/pebblesite/templates/website/base.html
@@ -8,18 +8,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <meta name="description" content="fullPage fixed full-screen backgrounds." />
      <!-- bootstrap -->
-     <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
-     <link href="./vendor/css/bootstrap.css" rel="stylesheet">
-
-     <!-- Font awesome -->
-     <link rel="stylesheet" href="Assets/css/fontawesome.css">
-     <link rel="stylesheet" href="Assets/css/brands.css">
-     <link rel="stylesheet" href="Assets/css/solid.css">
-
-     <!--<link rel="stylesheet" href="static/styles/style.css">
-     <link rel="stylesheet" href="static/styles/login.css">
-     <link rel="stylesheet" href="static/styles/signup.css">-->
-     
+ 
      <link rel="stylesheet" href="{% static 'styles/style.css' %}">
      <link rel="stylesheet" href="{% static 'styles/login.css' %}">
      <link rel="stylesheet" href="{% static 'styles/signup.css' %}">
@@ -65,56 +54,18 @@
           <section class="second-text row">
                <h3>If you do not have an account, please sign up first.</h3>
           </section>
-          <section id="fullpage" class="container container-signup">
+     </div>
+     <div id="fullpage" class="container fullpage">
                <section class="container ct-signup">
-                    <section class="signup">
-                         <div class="container container-signup">
-                              <div class="signup-content" id="signup-content">
-                              <!--      <form method="POST" id="signup-form" class="signup-form">
-                                        <h2 class="form-title">Sign Up</h2>
-                                        <div class="form-group">
-                                             <p>Email Address</p>
-                                             <input type="email" class="form-input" name="email" id="email"
-                                                  placeholder="Enter Email" />
-                                        </div>
-                                        <div class="form-group">
-                                             <p>Pseudo</p>
-                                             <input type="text" class="form-input" name="pseudo" id="pseudo"
-                                                  placeholder="pseudo">
-                                        </div>
-                                        <div class="form-group">
-                                             <p>Password</p>
-                                             <input type="text" class="form-input" name="password" id="password"
-                                                  placeholder="Password" />
-                                             <span toggle="#password"
-                                                  class="zmdi zmdi-eye field-icon toggle-password"></span>
-                                        </div>
-                                        <div class="form-group">
-                                             <input type="password" class="form-input" name="re_password"
-                                                  id="re_password" placeholder="Confirm password">
-                                        </div>
-                                        <div class="form-group">
-                                             <input type="checkbox" name="agree-term" id="agree-term"
-                                                  class="agree-term">
-                                             <label for="agree-term"
-                                                  class="label-agree-term"><span><span></span></span>I agree all
-                                                  statements in <a href="#" class="term-service">Terms of service</a>
-                                             </label>
-                                        </div>
-                                        <div class="form-group">
-                                             <input type="submit" name="submit" id="submit" class="form-submit"
-                                                  value="Submit" />
-                                        </div>
-
-                                   </form> -->
-                                   {% block body %}{% endblock %} 
-                                   <p class="loginhere">
-                                        Have already an account ? <a href="../templates/login.html"
-                                             class="loginhere-link">Login here</a>
-                                   </p>
-                              </div>
+                    <div class="container container-signup">
+                         <div class="signup-content" id="signup-content">
+                              {% block body %}{% endblock %} 
+                              <p class="loginhere">
+                                   Have already an account ? <a href="../templates/login.html"
+                                        class="loginhere-link">Login here</a>
+                              </p>
                          </div>
-                    </section>
+                    </div>
                </section>
                <section class=" fp-auto-height ct-accept" id="ct-accept">
                     <div class=" intro-about rule-style" , id="rule-web">
@@ -154,9 +105,7 @@
                               </div>
                     </div>
                </section>
-          </section>
      </div>
-     
      <footer>
           <hr>
           <p class="footer">Project Portfolio ToNoeMia</p>
