--- a/back_font_test/pebblesite/templates/website/index_logout.html
+++ b/back_font_test/pebblesite/templates/website/index_logout.html
@@ -7,13 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="fullPage fixed full-screen backgrounds." />
   <!-- bootstrap -->
-  <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
-  <link href="./vendor/css/bootstrap.css" rel="stylesheet">
+ 
 
-  <!-- Font awesome -->
-  <link rel="stylesheet" href="Assets/css/fontawesome.css">
-  <link rel="stylesheet" href="Assets/css/brands.css">
-  <link rel="stylesheet" href="Assets/css/solid.css">
 
   <link rel="stylesheet" href="../static/styles/style.css">
 </head>
@@ -43,7 +38,7 @@
     </div>
   </header>
  
-  <div id="fullpage" class="container">
+  <div class="fullpage">
     <div class="section2 fp-auto-height" id="section2">
       <div class="intro-text">
         {% block body %}{% endblock %}
