--- a/back_font_test/pebblesite/templates/website/mymatch_base.html
+++ b/back_font_test/pebblesite/templates/website/mymatch_base.html
@@ -9,7 +9,8 @@
   <meta name="description" content="fullPage fixed full-screen backgrounds." />
   <!-- bootstrap -->
 
-  <link href="./vendor/css/bootstrap.css" rel="stylesheet">
+
+  <!-- Font awesome -->
 
 
   <link rel="stylesheet" href="{% static 'styles/style.css' %}">
@@ -31,7 +32,7 @@
                     <a href="{% url 'quiz' %}" class="button-style button-menu" data-show="quiz"> Quiz </a>
                   </li>
                   <li>
-                    <a href="./about.html" class="button-style button-menu" data-show="about"> My Match </a>
+                    <a href="{% url 'mymatch' %}" class="button-style button-menu" data-show="mymatch"> My Match </a>
                   </li>
                   <li>
                     <a href="{% url 'logout' %}" class="button-style button-menu" data-show="login">Logout</a>
@@ -44,24 +45,14 @@
   
      <div class="fullpage">          
           <div class="logout button-style ">
-               <div>Hello</div>
+               <div>Congratulation</div>
                <div> {{ request.user.username }}</div>
           </div>
- 
-          <div class="section2 fp-auto-height" id="section2">
-               <div class="greating_text"> 
-                    <form action="" method="post" novalidate>
-                         <div>
-                              <h2>Are you ready to start?</h2>
-                              <br>
-                              <h2>Please click on Quiz</h2>
-
-                         </div>
-                         <!--<div>
-                              <input type="submit" class="button-style" value="Start">
-                         </div>-->
-                    </form>
-               </div>
+    </div>
+    <div>
+          <div>
+            <div>Here your destiny</div>
+            {% block body %}{% endblock %}
           </div>
      </div>
 </div>
