--- a/back_font_test/pebblesite/templates/website/about.html
+++ b/back_font_test/pebblesite/templates/website/about.html
@@ -7,13 +7,9 @@
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <meta name="description" content="fullPage fixed full-screen backgrounds." />
      <!-- bootstrap -->
-     <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
+
      <link href="./vendor/css/bootstrap.css" rel="stylesheet">
 
-     <!-- Font awesome -->
-     <link rel="stylesheet" href="Assets/css/fontawesome.css">
-     <link rel="stylesheet" href="Assets/css/brands.css">
-     <link rel="stylesheet" href="Assets/css/solid.css">
 
      <link rel="stylesheet" href="../static/styles/style.css">
 </head>
@@ -32,7 +28,7 @@
                                         data-show="home">Home</a>
                               </li>
                               <li>
-                                   <a href="../about.html"
+                                   <a href="{% url 'about' %}"
                                         class="scale_button button-menu button-style" data-show="about">About</a>
                               </li>
                               <li>
