--- a/back_font_test/pebblesite/templates/website/index.html
+++ b/back_font_test/pebblesite/templates/website/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,15 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="fullPage fixed full-screen backgrounds." />
   <!-- bootstrap -->
-  <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
+
   <link href="./vendor/css/bootstrap.css" rel="stylesheet">
 
-  <!-- Font awesome -->
-  <link rel="stylesheet" href="Assets/css/fontawesome.css">
-  <link rel="stylesheet" href="Assets/css/brands.css">
-  <link rel="stylesheet" href="Assets/css/solid.css">
 
-  <link rel="stylesheet" href="../static/styles/style.css">
+  <link rel="stylesheet" href="{% static 'styles/style.css' %}?{% now 'U' %}">
 </head>
 
 <body>
@@ -43,7 +40,7 @@
     </div>
   </header>
  
-  <div id="fullpage" class="container">
+  <div id="fullpage" class="fullpage">
     <div class="section2 fp-auto-height" id="section2">
       <div class="intro-text">
         <p class="text-white">Welcome to Pebble Match </p>
