--- a/back_font_test/pebblesite/templates/website/quiz.html
+++ b/back_font_test/pebblesite/templates/website/quiz.html
@@ -1,132 +1,36 @@
+{% extends "website/account_base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-     <title> quiz </title>
-     <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <meta name="description" content="fullPage fixed full-screen backgrounds." />
-     <!-- bootstrap -->
-     <script type="text/javascript" src="./vendor/js/bootstrap.js"></script>
-     <link href="./vendor/css/bootstrap.css" rel="stylesheet">
-
-     <!-- Font awesome -->
-     <link rel="stylesheet" href="Assets/css/fontawesome.css">
-     <link rel="stylesheet" href="Assets/css/brands.css">
-     <link rel="stylesheet" href="Assets/css/solid.css">
-
-     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
-     <!--<link rel="stylesheet" href="./css/style.css">-->
-</head>
-
-<body>
-
-     <header>
-          <div class="container_top">
-          <div class="logo_name">
-          <img class="images_logo" src="{% static 'images/logo.png' %}" alt="logo-pebble">
-          </div>
-      
-          <div class="nav_bar_menu">
-          <ul>
-               <li>
-                    <a href="{% url 'index' %}" class="button-style button-menu scale_button" data-show="quiz"> Quiz </a>
-               </li>
-               <li>
-                    <a href="{% url 'about' %}" class="button-style button-menu" data-show="about"> My Match </a>
-               </li>
-               <li>
-                    <a href="#" class="button-style button-menu" data-show="menu_hidden"> <i class="fa-solid fa-house"></i></a>
-                    <div class="menu_hidden menu_show">
-                         <nav>
-                              <ul>
-                              <li>
-                                   <a href="{% url 'index' %}" class="" data-show="home"> Home </a>
-                              </li>
-                              <li>
-                                   <a href="{% url 'about' %}" class="" data-show="home"> About </a>
-                              </li>
-                              <li>
-                                   <a href="{% url 'logout' %}" class="" data-show="login">Logout</a>
-                              </li>
-                              </ul>
-                         </nav>
-                    </div>
-               </li>
-          </ul>
-          </div>
-          </div>
-     </header>
-
-     <div class="container">
-     <div class="section1 row">
-  
-          <div class="col-sm-6">
-               <div class="button-style " type="text" data-show="name_user">
-                    <p>{{ request.user.username }}</p>
+{% block body %}
+<form method="post">
+     {% csrf_token %}
+     {% for question in questions %}
+          <h3>{{ question.question_text }}</h3>
+          {% for choice in question.choice_set.all %}
+               <div>
+                    <input type="radio" id="choice{{ choice.id }}" name="question{{ question.id }}" value="{{ choice.id }}">
+                    <label for="choice{{ choice.id }}">{{ choice.choice_text }}</label>
                </div>
+          {% endfor %}
+     {% endfor %}
+     <a href="{% url 'mymatch' %}" class="button-menu button-style scale_button" data-show="match">Match</a>
+</form>
+<!--
+          {% for question in questions %}
+          <div class="quiz_style">
+          <h1>Anwser your question</h1>
+               <h2>{{ question.question_text }}</h2>
+               <form method="post" action="question.id">
+                    {% csrf_token %}
+                    {% for choice in choices %}
+                         <div>
+                         <input type="radio" id="choice{{ forloop.counter }}" name="choice" value="{{ choice.id }}">
+                         <label for="choice{{ forloop.counter }}">{{ choice.choice_text}}</label>
+                         </div>
+                    {% endfor %}
+                    <button type="submit" class="button-style">Next</button>
+               </form>
           </div>
-          
-     </div>
-     <div class="row">
-          <div class="hr-underline"></div>
-
-     </div>
-          <div class="section2 fp-auto-height" id="section2">
-               <div class="quiz" , id="question1">
-                    <span>1</span><p>How do you squeze your toothpaste</p>
-               </div>
-               <div class="checkbox">
-                    <div class="form-group">
-                         <input type="checkbox" name="answer" id="answer"
-                              class="answer">
-                         <label>
-                              <span>A</span> From the bottom
-                         </label>
-                    </div>
-                    <div class="form-group">
-                         <input type="checkbox" name="answer" id="answer"
-                              class="answer">
-                              <label>
-                                   <span>B</span> I do not care
-                              </label>
-                    </div>
-               </div>
-          </div>
-          <input type="submit" class="btn btn-outline-primary" value="Next">
-    
-     </div>
-</div>
-<div class="container result">
-     <div class="row">
-          <div class="person1 col" >
-               <img src="./images/penguin_8bits_a.png" alt="logo">
-               <div class="name_match">
-                    <p>Mia Meo meo</p>
-                    <p>99%</p>
-               </div>
-          </div>
-          <div class="person1 col">
-               <img src="./images/penguin_8bits_a.png" alt="logo">
-               <div class="name_match">
-                    <p>Mia Meo meo</p>
-                    <p>99%</p>
-               </div>
-          </div>
-          <div class="person1 col">
-               <img src="./images/penguin_8bits_a.png" alt="logo">
-               <div class="name_match">
-                    <p>Mia Meo meo</p>
-                    <p>99%</p>
-               </div>
-          </div>
-     </div>
-</div>-->
-     <footer>
-     <hr>
-          <p class="footer">Project Portfolio ToNoeMia</p>
-     </footer>
-     <script type="text/javascript" src="../js/index.js"></script>
-</body >
-</html >
+          {% endfor %}
+     -->
+{% endblock %}
