update: css part

--- a/back_font_test/pebblesite/templates/authn/login.html
+++ b/back_font_test/pebblesite/templates/authn/login.html
@@ -53,7 +53,7 @@
                 </div>
             {% endif %}
             <div class="submit-row">
-                <input class="btn btn-primary" type="submit" value="Log in">
+                <input  type="submit" value="Log in">
             </div>
             <br/>
            <!-- <a class="btn btn-primary" href="{% url 'password_reset' %}">Forgot password?</a>-->
