--- a/back_font_test/pebblesite/account/static/styles/login.css
+++ b/back_font_test/pebblesite/account/static/styles/login.css
@@ -75,7 +75,7 @@ h2.active {
 
 /* FORM TYPOGRAPHY*/
 
-input[type=button], input[type=submit], input[type=reset],  {
+input[type=button], input[type=submit], input[type=reset] {
   background-color: white ;
   border: none;
   padding: 15px 80px;
@@ -107,7 +107,7 @@ input[type=button]:active, input[type=submit]:active, input[type=reset]:active  
   -ms-transform: scale(0.95);
   transform: scale(0.95);
 }
-input#id_username, input#id_password, input#id_email, input#id_password_confirm,  input#id_first_name {
+input#id_username, input#id_password, input#id_email, input#id_password_confirm,  input#id_first_name, input#id_last_name {
   background-color: rgb(193, 189, 189);
   border: none;
   color: #0d0d0d;
