--- a/back_font_test/pebblesite/account/static/styles/style.css
+++ b/back_font_test/pebblesite/account/static/styles/style.css
@@ -83,10 +83,8 @@ body {
 
      font-size: 1.2rem;
      font-family: 'CustomFont', sans-serif;
-     transition: 0.4s;
 
      margin-right: 1rem;
-     width: 100%;
      height: 4.5rem;
 
      cursor: pointer;
@@ -181,10 +179,10 @@ body {
 
      font-size: 20px;
     
-     line-height: 2rem;
+     line-height: 2.5rem;
 
      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-     color: white;
+     color: rgb(153, 36, 36);
 
      transition: 0.4s;
 
@@ -217,5 +215,8 @@ body {
           margin-bottom: var(--margin-bottom);
           font-size: 1.2rem;
      }
-
+#how ul li {
+     list-style: none!important;
+     text-align: left;
+}
 /* account page */
