--- a/back_font_test/pebblesite/templates/account/account.html
+++ b/back_font_test/pebblesite/templates/account/account.html
@@ -31,7 +31,7 @@
                     <a href="{% url 'quiz' %}" class="button-style button-menu" data-show="quiz"> Quiz </a>
                   </li>
                   <li>
-                    <a href="./about.html" class="button-style button-menu" data-show="about"> My Match </a>
+                    <a href="{% url 'about' %}"class="button-style button-menu" data-show="myMatch"> About </a>
                   </li>
                   <li>
                     <a href="{% url 'logout' %}" class="button-style button-menu" data-show="login">Logout</a>
@@ -57,6 +57,9 @@
                               <h2>Please click on Quiz</h2>
 
                          </div>
+                         <div class="submit-row">
+                              <input class="button-style" type="submit" value="Quiz now">
+                          </div>
                          <!--<div>
                               <input type="submit" class="button-style" value="Start">
                          </div>-->
