--- a/back_font_test/pebblesite/templates/website/base.html
+++ b/back_font_test/pebblesite/templates/website/base.html
@@ -9,8 +9,8 @@
      <meta name="description" content="fullPage fixed full-screen backgrounds." />
      <!-- bootstrap -->
  
-     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
-     <link rel="stylesheet" href="{% static 'styles/login.css' %}">
+     <link rel="stylesheet" href="{% static 'styles/style.css' %} ">
+     <link rel="stylesheet" href="{% static 'styles/login.css' %}?{% now 'U' %} ">
      <link rel="stylesheet" href="{% static 'styles/signup.css' %}">
 
 </head>
