update: database get data

--- a/back_font_test/pebblesite/templates/account/account.html
+++ b/back_font_test/pebblesite/templates/account/account.html
@@ -58,7 +58,7 @@
 
                          </div>
                          <div class="submit-row">
-                              <input class="button-style" type="submit" value="Quiz now">
+                              <a href="{% url 'quiz' %}" input class="button-style" type="submit" value="Quiz now">Quiz now</a>
                           </div>
                          <!--<div>
                               <input type="submit" class="button-style" value="Start">
