--- a/back_font_test/pebblesite/templates/website/account_base.html
+++ b/back_font_test/pebblesite/templates/website/account_base.html
@@ -28,7 +28,7 @@
                     <a href="{% url 'quiz' %}" class="button-style button-menu" data-show="quiz"> Quiz </a>
                   </li>
                   <li>
-                    <a href="{% url 'mymatch' %}" class="button-style button-menu" data-show="about"> My Match </a>
+                    <a href="{% url 'about' %}" class="button-style button-menu" data-show="myMatch"> About </a>
                   </li>
                   <li>
                     <a href="{% url 'logout' %}" class="button-style button-menu" data-show="login">Logout</a>
