--- a/back_font_test/pebblesite/templates/website/mymatch_base.html
+++ b/back_font_test/pebblesite/templates/website/mymatch_base.html
@@ -32,7 +32,7 @@
                     <a href="{% url 'quiz' %}" class="button-style button-menu" data-show="quiz"> Quiz </a>
                   </li>
                   <li>
-                    <a href="{% url 'mymatch' %}" class="button-style button-menu" data-show="mymatch"> My Match </a>
+                    <a href="{% url 'mymatch' user_id=request.user.id %}" class="button-style button-menu" data-show="mymatch"> My Match </a>
                   </li>
                   <li>
                     <a href="{% url 'logout' %}" class="button-style button-menu" data-show="login">Logout</a>
